# FastAPI-advertisements-board

./: README.md  Specification.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2023_11_30_1658-638f45adb3ef_initial_commit.py  2023_11_30_1707-be4880dcc4b2_initial_commit.py  2023_12_01_0905-1728a05a41d2_initial_commit.py  2023_12_04_1802-63125e2acf26_add_ad_number_field_for_ad_class_which_.py  2023_12_04_2044-8858a46b855f_initial_migration_alter_ad_number_with_.py  2023_12_05_1024-4e9719d32adb_alter_table_ads_adding_cascade_all_.py
src/: main.py
src/api/ads/: ad.py  crud.py  schemas.py
src/api/comments/: comment.py  crud.py  schemas.py
src/api/users/: crud.py  schemas.py  user.py
src/auth/: jwt_auth.py
src/core/: config.py  db.py  models.py
src/models/: advertisement.py  base.py  comment.py  complaint.py  review.py  user.py
tests/: conftest.py  test_create_user.py
tests/user/: test_create_user.py
