[tool.poetry]
name = "test-task-productivity-inside"
version = "0.1.0"
description = ""
authors = ["David-Roklem <roklem@mail.ru>"]
readme = "README.md"
packages = [{include = "test_task_productivity_inside"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
